# proyecto-si783-2026-i-u1-analizador-de-rendimiento-de-consultas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  IMPLEMENTACION_COMPLETADA.md  Makefile  README.md  TESTING_WITH_SEED_DATA.md  fix_execution_time.py  jreleaser.yml  main.py  pre-commit-output.txt  pyproject.toml
.github/workflows/: integration-tests.yml  release.yml  rollback-release.yml
dbtest/: COCKROACHDB_RAW_OUTPUT.md  COCKROACHDB_TEST_REPORT.md  NEO4J_RAW_OUTPUT.md  NEO4J_TEST_REPORT.md
docker/: Dockerfile  compose.yml  docker-compose.yml  entrypoint-yugabytedb.sh
docker/init/: 01-init-mysql-users.sql  01-init-postgres-users.sql
docker/seed/: README.md  init-cockroachdb.sql  init-elasticsearch.json  init-influxdb.py  init-mongodb-logs.json  init-mongodb-users.json  init-mongodb.js  init-mongodb.json  init-mysql.sql  init-neo4j.cypher  init-postgres.sql  init-redis.py  init-sqlite.sql  init-yugabytedb.sql
docs/: CASSANDRA_ADAPTER.md  FD01-Informe-Factibilidad.md  FD02-Informe-Vision.md  FD03-Especificacion-Requerimientos.md  FD04-Informe-Arquitectura.md  INDEX.md
docs/adapters/: DYNAMODB.md
docs/cli/: ANALYZE_COMMAND.md  PROFILE_COMMANDS.md  README.md
examples/: dynamodb_advanced.py  dynamodb_basic.py  dynamodb_programmatic.py
manual_testing/: northwind_perf.sql  test_scenarios.md
query_analyzer/adapters/: __init__.py  base.py  exceptions.py  migration_helpers.py  models.py  redis.py  registry.py
query_analyzer/cli/: main.py  prompts.py  questionary_prompts.py  utils.py
query_analyzer/config/: __init__.py  crypto.py  exceptions.py  manager.py  models.py
query_analyzer/core/: __init__.py  anti_pattern_detector.py  dynamodb_anti_pattern_detector.py
query_analyzer/tui/: __init__.py  app.py  connection_state.py
scripts/: capture_neo4j_queries.py  clear_neo4j.py  create_db_profiles.py  create_sqlite_test_db.py  init-sqlite.ps1  init-sqlite.sh  load_neo4j_seed.py  seed.ps1  seed.sh  seed_sqlite.py  test_neo4j_queries.py  wait-for-services.sh
tests/: conftest.py
tests/integration/: README.md  conftest_integration.py  test_cockroachdb_integration.py  test_elasticsearch_integration.py  test_influxdb_integration.py  test_mongodb_integration.py  test_mssql_integration.py  test_mysql_integration.py  test_neo4j_integration.py  test_postgresql_integration.py  test_redis_integration.py  test_sqlite_integration.py  test_yugabytedb_integration.py
tests/unit/: conftest.py  (+35 more)
(+57 files in other folders)
