[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.0",
    "pymongo>=4.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "textual>=8.2.2",
    "typer>=0.24.1",
    "cryptography>=42.0.0",
    "redis>=5.0",
]

[tool.setuptools]
packages = ["query_analyzer"]

[project.scripts]
query_analyzer = "query_analyzer.cli.main:main"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.9",
    # Type stubs para librerías externas
    "types-psycopg2>=2.9.21.19.1",
    "types-PyMySQL>=1.1.0.20240815",
    "types-PyYAML>=6.0.12.20240917",
    "types-redis>=4.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
# E, F, W: Errores base | I: isort | N: pep8-naming | UP: pyupgrade | B: flake8-bugbear | D: pydocstyle
select = ["E", "F", "W", "I", "N", "UP", "B", "D"]
ignore = ["E501"]  # Ignorar line-length (lo maneja ruff-format)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "B017"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # En false temporalmente hasta tipar el 100% del proyecto
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
exclude = [
    "^tests/",
    "^build/",
    "^dist/",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
module = "pymongo.*"
ignore_missing_imports = true
